--- a/lect0918.md
+++ b/lect0918.md
@@ -1,2 +1,5 @@
 函数类型: not :: Bool -> Bool, myMax :: Int -> Int -> Int
-"->" 是左结合的 即 Int -> Int -> Int 等价于 Int -> (Int -> Int)
+"->" 是右结合的 即 Int -> Int -> Int 等价于 Int -> (Int -> Int)
+
+Curry form
+mult :: Int -> Int -> Int
