--- a/lect0918.md
+++ b/lect0918.md
@@ -3,3 +3,12 @@
 
 Curry form
 mult :: Int -> Int -> Int
+mult x y = x * y
+(Bool -> Bool) -> Bool is not the same as Bool->(Bool->Bool)
+
+Uncurried form
+mult2 :: (Int, Int) -> Int
+mult2 (x,y) = x * y
+
+-- 表示春夏秋冬
+data Season = Spring | Summer | Autumn | Winter
