--- a/lect0918.md
+++ b/lect0918.md
@@ -1,21 +1,21 @@
 # 函数类型: 
-## not :: Bool -> Bool, myMax :: Int -> Int -> Int
-## "->" 是右结合的 即 Int -> Int -> Int 等价于 Int -> (Int -> Int)
+### not :: Bool -> Bool, myMax :: Int -> Int -> Int
+### "->" 是右结合的 即 Int -> Int -> Int 等价于 Int -> (Int -> Int)
 
-# Curry form
-## mult :: Int -> Int -> Int
-## mult x y = x * y
-## (Bool -> Bool) -> Bool is not the same as Bool->(Bool->Bool)
+## Curry form
+### mult :: Int -> Int -> Int
+### mult x y = x * y
+### (Bool -> Bool) -> Bool is not the same as Bool->(Bool->Bool)
 
-# Uncurried form
-## mult2 :: (Int, Int) -> Int
-## mult2 (x,y) = x * y
+## Uncurried form
+### mult2 :: (Int, Int) -> Int
+### mult2 (x,y) = x * y
 
-# -- 表示春夏秋冬
-## data Season = Spring | Summer | Fall | Winter deriving (Show, Eq)
+## -- 表示春夏秋冬
+### data Season = Spring | Summer | Fall | Winter deriving (Show, Eq)
 
 
-## next Spring = Summer
-## next Summer = Fall
-## next Fall = Winter
-## next Winter = Spring
+### next Spring = Summer
+### next Summer = Fall
+### next Fall = Winter
+### next Winter = Spring
