--- a/lect0918.md
+++ b/lect0918.md
@@ -19,3 +19,15 @@
 ### next Summer = Fall
 ### next Fall = Winter
 ### next Winter = Spring
+
+### isHot :: Season -> Bool
+### isHot Summer = True
+### isHot _ = False
+
+### ---data Bool = True | False
+
+### --许多同类型的东西如何表示
+```
+[12,13,14] :: [Int]
+[("Bob",'M',20),("Jane","F",22)] :: [(String,Char,Int)]
+```
