--- a/lect0918.md
+++ b/lect0918.md
@@ -30,4 +30,18 @@
 ```
 [12,13,14] :: [Int]
 [("Bob",'M',20),("Jane","F",22)] :: [(String,Char,Int)]
+-- 0! = 1 n! = n * (n-1)!
+-- fact n = n!
+fact :: Integer -> Integer
+fact 0 = 1
+fact n = n * (fact (n-1))
+
+--TEST
+import Test.QuickCheck
+
+myMax :: Int -> Int -> Int
+myMax x y = if x > y then x else y
+
+prop_myMax :: Int -> Int -> Bool
+prop_myMax x y = prop
 ```
